fixed side panel button cut off

--- a/src/static/src/scss/components/_side-panel.scss
+++ b/src/static/src/scss/components/_side-panel.scss
@@ -55,7 +55,7 @@
 
     [dmb-side-panel-close] {
       @media (max-width: 599px) {
-        right: 30px;
+        right: 40px;
         top: 40px;
         width: 40px;
       }
